[tool.poetry]
name = "moot-app"
version = "0.1.0"
description = "A simple app for taking moot bookings"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
WTForms = "^2.3.3"
wtforms = {extras = ["email"], version = "^2.3.3"}
email_validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
